--- a/Nearbite/Gemfile
+++ b/Nearbite/Gemfile
@@ -12,11 +12,14 @@ gem 'jbuilder', '~> 2.0'
 gem 'sdoc', '~> 0.4.0', group: :doc
 
 gem 'haml-rails', '~> 0.9.0'
-gem 'simple_form', '~> 3.1.0'
+gem 'simple_form', '~> 3.2.0'
 gem 'bootstrap-sass', '~> 3.3.5.1'
 gem 'paperclip', '~> 4.3.0'
 gem 'cocoon', '~> 1.2.6'
 gem 'devise', '~> 3.5.2'
+
+gem 'city-state'
+gem 'country_state_select', '3.0.2'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
